# Cpp_Study

./: .gitignore  CMakeLists.txt  CODE_REVIEW_REPORT.md  CONCEPTS_LIST.md  README_STYLE_GUIDE.md  README_VIEWER.md  add_headers_to_cpp.ps1  main.cpp  manual_build.bat  setup_env.bat  test_env.bat  verify_all.ps1  verify_curriculum.ps1  verify_weeks.ps1
Week1/: CMakeLists.txt  README.md  build_cmake.bat  build_manual.bat
Week1/src/: 01_smart_pointers.cpp  02_lambdas.cpp  03_jthread.cpp
Week10/: CMakeLists.txt  README.md  build_cmake.bat
Week10/src/: 01_sync_logger.cpp  02_async_logger.cpp
Week11/: CMakeLists.txt  README.md  build_cmake.bat
Week11/src/: 01_winsock_init.cpp  02_ip_address.cpp  03_simple_socket.cpp
Week12/: CMakeLists.txt  README.md  build_cmake.bat
Week12/src/: 01_echo_server.cpp  02_echo_client.cpp
Week13/: CMakeLists.txt  README.md  build_cmake.bat
Week13/src/: 01_select_server.cpp
Week14/: CMakeLists.txt  README.md  build_cmake.bat
Week14/src/: 01_nonblocking_server.cpp
Week15/: CMakeLists.txt  README.md  build_cmake.bat
Week15/src/: 01_chat_server.cpp
Week16/: CMakeLists.txt  README.md  build_cmake.bat
Week16/src/: 01_refactored_server.cpp
Week17/: CMakeLists.txt  README.md  build_cmake.bat
Week17/src/: 01_packet_structure.cpp  02_serialization.cpp
Week18/: CMakeLists.txt  README.md  build_cmake.bat
Week18/src/: 01_mock_db.cpp
Week19/: CMakeLists.txt  README.md  build_cmake.bat
Week19/src/: 01_session_manager.cpp
Week2/: CMakeLists.txt  README.md  build_cmake.bat
Week2/src/: 01_thread_lifecycle.cpp  02_argument_passing.cpp  03_parallel_sum.cpp
Week20/: CMakeLists.txt  README.md  build_cmake.bat
Week20/src/: 01_worker_pattern.cpp
Week21/: CMakeLists.txt  README.md  build_cmake.bat
Week21/src/: 01_iocp_basic.cpp
Week22/: CMakeLists.txt  README.md  build_cmake.bat
Week22/src/: 01_iocp_echo.cpp  02_iocp_pitfalls.cpp  03_iocp_raii.cpp
Week23/: CMakeLists.txt  README.md  build_cmake.bat
Week23/src/: 01_iocp_chat_basic.cpp
Week24/: 03_tcp_stream_guide.md  CMakeLists.txt  README.md  build_cmake.bat
Week24/src/: 01_ring_buffer.cpp  02_packet_handling.cpp
Week25/: CMakeLists.txt  README.md  build_cmake.bat  setup_asio.bat
Week25/src/: 01_timer_sync.cpp  02_timer_async.cpp
Week26/: CMakeLists.txt  README.md  build_cmake.bat
Week26/src/: 01_asio_echo.cpp
Week27/: CMakeLists.txt  README.md  build_cmake.bat
Week27/src/: 01_asio_chat.cpp
Week28/: CMakeLists.txt  README.md  build_cmake.bat
Week28/src/: 01_slow_server.cpp
Week29/: CMakeLists.txt  README.md  build_cmake.bat
Week29/src/: main.cpp
Week3/: CMakeLists.txt  README.md  build_cmake.bat
Week3/src/: 01_race_condition.cpp  02_mutex_guard.cpp  03_thread_safe_list.cpp
Week30/: CMakeLists.txt  README.md
Week30/src/: ServerCore.h
Week31/: CMakeLists.txt  README.md  build_cmake.bat
Week31/src/: main.cpp
Week32/: CMakeLists.txt  README.md  build_cmake.bat
Week32/src/: main.cpp
Week4/: CMakeLists.txt  README.md  build_cmake.bat
Week4/src/: 01_deadlock_demo.cpp  02_scoped_lock.cpp  03_dining_philosophers.cpp
Week5/: CMakeLists.txt  README.md  build_cmake.bat
Week5/src/: 01_condition_variable.cpp  02_producer_consumer.cpp  03_spurious_wakeup.cpp
Week6/: CMakeLists.txt  README.md  build_cmake.bat
Week6/src/: 01_promise_future.cpp  02_async_task.cpp  03_shared_future.cpp
Week7/: CMakeLists.txt  README.md  build_cmake.bat
Week7/src/: 01_thread_safe_queue.cpp  02_simple_thread_pool.cpp
Week8/: CMakeLists.txt  README.md  build_cmake.bat
Week8/src/: 01_atomic_counter.cpp  02_cas_loop.cpp  03_spinlock.cpp
Week9/: 04_memory_model_guide.md  CMakeLists.txt  README.md  build_cmake.bat
Week9/src/: 01_reordering_demo.cpp  02_acquire_release.cpp  02_memory_order_demo.cpp  03_atomic_fence.cpp
viewer/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.app.json  tsconfig.base.json  tsconfig.node.json  vite.config.ts
viewer/public/code/Week1/: 01_smart_pointers.cpp  02_lambdas.cpp  03_jthread.cpp
viewer/public/code/Week10/: 01_sync_logger.cpp
viewer/public/code/Week11/: 03_simple_socket.cpp
viewer/public/code/Week12/: 01_echo_server.cpp  02_echo_client.cpp
viewer/public/code/Week13/: 01_select_server.cpp
viewer/public/code/Week17/: 01_packet_structure.cpp  02_serialization.cpp
viewer/public/code/Week19/: 01_session_manager.cpp
viewer/public/code/Week2/: 01_thread_lifecycle.cpp
viewer/public/code/Week20/: 01_worker_pattern.cpp
viewer/public/code/Week22/: 01_iocp_echo.cpp  03_iocp_raii.cpp
viewer/public/code/Week23/: 01_iocp_chat_basic.cpp
viewer/public/code/Week24/: 02_packet_handling.cpp
viewer/public/code/Week25/: 01_timer_sync.cpp  02_timer_async.cpp
viewer/public/code/Week26/: 01_asio_echo.cpp
viewer/public/code/Week28/: 01_slow_server.cpp
viewer/public/code/Week29/: main.cpp
viewer/public/code/Week3/: 02_mutex_guard.cpp  03_thread_safe_list.cpp
viewer/public/code/Week30/: main.cpp
viewer/public/code/Week4/: 01_deadlock_demo.cpp  02_scoped_lock.cpp  03_dining_philosophers.cpp
viewer/public/code/Week5/: 01_condition_variable.cpp  02_producer_consumer.cpp  03_spurious_wakeup.cpp
viewer/public/code/Week7/: 01_thread_safe_queue.cpp  02_simple_thread_pool.cpp  03_using_thread_pool.cpp
viewer/public/weeks/: Week1.md  Week11.md  Week14.md  Week15.md  Week21.md  Week22.md  Week23.md  Week24.md  Week25.md  Week26.md  Week27.md  Week28.md  Week3.md  Week31.md  Week4.md  Week6.md  Week7.md  Week8.md
viewer/scripts/: sync-weeks.mjs
viewer/src/: App.backup.tsx  App.tsx  AppNew.tsx  index.css  main.tsx  types.ts
viewer/src/components/: CodeViewer.tsx  MarkdownViewer.tsx  SearchBar.tsx  SearchInput.tsx  Sidebar.tsx  SidebarClean.tsx  SidebarFinal.tsx  SidebarNew.tsx  SourceList.tsx  ThemeToggle.tsx  ThemeToggle2.tsx  WeekCard.tsx  WeekList.tsx
viewer/src/data/: weeks.generated.ts
viewer/src/hooks/: useCachedTextResource.ts  useMarkdown.ts  useTheme.ts
(+3 files in other folders)
